--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ yarn-error.log
 testem.log
 /typings
 
+/src/environments/environment.ts
+/src/environments/environment.prod.ts
+
 # System files
 .DS_Store
 Thumbs.db
