--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,15 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "scripts": [
+                "node -r dotenv/config"
+              ],
               "budgets": [
                 {
                   "type": "initial",
