--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
                 }
               ],
               "scripts": [
-                "node -r dotenv/config"
+                "node -r dotenv/config",
+                "node replace-env-vars.js"
               ],
               "budgets": [
                 {
